--- a/frontend/src/components/header/Navbar.css
+++ b/frontend/src/components/header/Navbar.css
@@ -264,6 +264,8 @@ body {
     justify-content: space-around;
     align-items: center;
     list-style: none;
+    margin-top: 10px;
+    
   }
   .navbar-item {
     font-family: "Protest Riot";
